backend-printing/k8s/gateway.yaml
# This file is used to create a gateway and virtual service for the backend-printing service

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: backend-printing-gateway
spec:
  selector:
    istio: aks-istio-ingressgateway-internal
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend-printing-virtualservice
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - backend-printing-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: backend-printing.default.svc.cluster.local
        port:
          number: 8000

---
